source/stylesheets/wai-act.scss
/* ... */
table, tr {
	&.numbers td {
		text-align: right;
	}
}

// Forms

.form-submitTestCase {
	width:75%;
	margin: 0 auto;
}

form {
	fieldset {
		margin-bottom: 1em;
		legend + p {
			margin-top: 0;
		}
	}
	button {
		&[type=submit] {
			float:right;
		}
	}
}

// Search input

[role=search] {
	input {

	}
}

// Form Block

.form-block {
	display: table;
	width: 100%;
	border: 1px solid #999;
	border-radius: .5em;
}

// Form Row

.form-row {
	display: table-row;
	label, > span {
		border-top: 1px solid #999;
		display: table-cell;
		vertical-align: middle;
		padding: .5em;
	}
	&:first-child {
		label, > span {
			border-top: none;
		}
	}
	&:nth-child(even) {
		background-color: #f3f3f3;
	}
	&:nth-child(odd) {
		background-color: #eee;
	}
	label {
		width: 25%;
	}
	input, select, textarea {
		width: 90%;
	}
	textarea {
		height: 3em;
	}
}

// Selects

select {
	padding: .25em;
	font-size: 1em;
}

// Buttons

.btn {
	background: linear-gradient(to bottom, lighten(#ccc, 10%), #ccc);
	color: #333;
	font-weight: normal;
	font-size: 1em;
	line-height: percentage(44/18);
	padding: .25em .5em;
	border: {
		color: #ccc;
		width: 1px;
		style: solid;
		radius: .25em;
	}
	&:hover {
		color: #333;
	}
}

.btn-primary {
	@extend .btn;
	background: linear-gradient(to bottom, lighten(#036, 10%), #036);
	color: #fff;
	border-color: darken(#036, 10%);
	&:hover, &:focus {
		color: #fff;
		text-decoration: underline;
	}
}

.btn-small {
	@extend .btn;
	padding: .15em .2em;
	line-height: 1.75;
}

.btn-icon {
	border: none;
	background-color: transparent;
	padding: 0;
}

.btn-next {
	float:right;
}

.btn-jump {
	display: block;
	margin: 0 1em 1em;
	text-align: center;
	@include mq($medium) {
		position: absolute;
		left: -1000em;
		&:focus {
			position: static;
			left:0;
		}
	}
}

.permalink {
	@extend .font-primary;
	@extend .btn-small;
	color: #666;
	float:right;
	display: inline-block;
	font-size: 14px;
	line-height: 1;
	vertical-align: middle;
}

.decision-tree {
	list-style: none;
	margin: 1em 0;
	padding:0;
	> li {
		> strong {
			display: block;
			padding: 1em .5em;
		}
		border: 2px solid #999;
		border-top:none;
		&:first-child {
			border-top:2px solid #999;
		}
		> ul {
			padding:0;
			list-style: none;
			.flexbox & {
				display:flex;
				flex-direction: row-reverse;
				flex-wrap: wrap;
				align-items: stretch;
			}
			border-top: 1px dotted #aaa;
			> li {
				text-indent: 0;
				box-sizing: border-box;
				font-weight: normal;
				.flexbox & {
					flex-basis: 25%;
				}
				padding: .5em;
				// border: 1px solid #aaa;
				&:nth-child(odd) {
					.flexbox & {
						flex-basis: 75%;
					}
				}
				&:nth-child(odd):last-child {
					display:block;
					width:100%;
				}
				ul {
					padding:0;
					margin:0;
				}
				li {
					padding: 0;
					padding-bottom: 0.5em;
					margin-bottom: 0.5em;
					border-bottom: 1px solid #888;
					list-style: none;
					> em {
						display: block;
						padding-left: 1.5em;
						position: relative;
						margin-top: .25em;
						font-style: normal;
						&:before {
							position:absolute;
							@extend .icon;
							@extend .icon-arrow-right;
							content: '';
							top:.2em;
							margin-left: -1.5em;
						}
					}
					&:last-child {
						border-bottom-style: none;
						padding-bottom: 0;
						margin-bottom: 0;
					}
				}
			}
		}
	}
	.yes {
		background-color: #D9EDF7;
		border-bottom: none;
		li {
			list-style: disc;
			margin-left: 1em;
			&:only-child {
				list-style: none;
			}
		}
	}
	.no {
		border-right:1px dotted #aaa;
		background-color: #F2DEDE;
		border-bottom: none;
		position: relative;
		&:after { top: 100%; left: 50%; border: solid transparent; content: " "; height: 0; width: 0; position: absolute; pointer-events: none; border-color: rgba(119, 119, 119, 0); border-top-color: #F2DEDE; border-width: 1em; margin-left: -.5em; z-index: 500; }
		&:before { top: 100%; left: 50%; border: solid transparent; content: " "; height: 0; width: 0; position: absolute; pointer-events: none; border-color: rgba(119, 119, 119, 0); border-top-color: #999; border-width: 1.2em; margin-left: -.7em; z-index: 400; }
	}
}

/*
.decision-tree {
	&, ul {
		padding: 0;
	}
	li {
		list-style:none;
	}
	> li {
		border-left: 1em solid #777;
		padding: .5em 0 0 .5em;
		font-weight: bold;
		background-color: #777;
		color: #fff;
		li {
			font-weight: normal;
			background-color: #F5F5F5;
			color: #777;
			border-bottom: 1px solid #777;
			padding: .5em 0 .5em .5em;
		}
	}
}

/* ====== ICONS   ======== EDIT ABOVE! ======== */

.icon {
	display:inline-block;
	height: 1em;
	width: 1em;
	background-size: contain;
	background-repeat:no-repeat;
	background-position: center;
	vertical-align: middle;
}

.icon-with-visible-text {
	margin-right:.25em;
}

.icon-with-visible-text-before {
	margin-left:.25em;
}

@import 'icons-png';
.svg {
	@import 'icons-svg';
}

/* ====== HELPERS ======== EDIT ABOVE! ======== */

/*
* Hide only visually, but have it available for screenreaders: h5bp.com/v
*/

.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

/*
* Extends the .visuallyhidden class to allow the element to be focusable
* when navigated to via the keyboard: h5bp.com/p
*/

.visuallyhidden.hasfocus,
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
	clip: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	position: static;
	width: auto;
}

// Grid System

// Column wrapper

.grid {
	@include container();
}

.with-filter {
	clear: both;
	@include mq($medium) {
		h3>button {display:none;}
		.column-first {
			@include column(4);
		}
		.column-second {
			@include column(8);
			@include push(4);
		}
	}
	&.with-basket {
		@include mq($medium) {
		h3>button {display:none;}
		.column-first {
			@include column(3);
		}
		.column-second {
			@include column(7);
			@include push(3);
		}
		.column-third {
			@include column(2);
			@include push(10);
		}
	}
	}
}
/* ... */

